git ignore 및 db 설정

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### properties###
+src/main/resources/application-dev.yml
+src/main/resources/application-local.yml
+src/main/resources/application-prd.yml
