--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	}	
+	
+	
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 }
 
 test {
