--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ dependencies {
 	
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+	
+	implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.0.RELEASE'
+	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+	compile group: 'org.springframework.session', name: 'spring-session-jdbc', version: '2.2.0.RELEASE'
+
 }
 
 test {
