--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 spring:
   profiles:
     active: local
+
+    include: oauth
+
+  session:
+    jdbc:
+      initialize-schema: always
+    store-type: jdbc
+
+
+
