--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,20 @@
-plugins {
-	id 'org.springframework.boot' version '2.2.2.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'java'
+buildscript {
+	ext {
+		springBootVersion = '2.1.7.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+		jcenter()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
 }
+
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.meme'
 version = '0.0.1-SNAPSHOT'
@@ -35,7 +47,7 @@ dependencies {
 	
 	implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.0.RELEASE'
 	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
-	compile group: 'org.springframework.session', name: 'spring-session-jdbc', version: '2.2.0.RELEASE'
+	compile group: 'org.springframework.session', name: 'spring-session-jdbc'
 
 }
 
