1. 로그인 한사람만 태그 추가 가능 하도록 (태그 추가기능) 2. 이미지파일 암호화 (빠른 HASH 함수 사용) -> 이름 암호화 3. 태그기능 수정(,로 ) 4. 사진 개수 많을때 분리해주기 -> 10개씩 5. 사진 크기 압축하지 않고 가운데만 표시하기 6. 업로드 페이지 css 추가 (페이지 폰트 수정 및 박스 선 추가) 7. 어드민에게만 image, tag 삭제할 수 있는 권한 주기 -> /admin/**은 어드민만 접근 가능함 8. 로그인 페이지 만들고 그쪽에 로그인 버튼 만들기 (현재 있는 로그인 버튼들 빼기)

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
 	compile group: 'org.springframework.session', name: 'spring-session-jdbc'
 
+	compile group: 'com.sangupta', name: 'murmur', version: '1.0.0'
+
 }
 
 test {
